re PR c++/39225 (ICE if destructor doen't match class name)

PR c++/39225
        * decl.c (grokdeclarator): Handle ~identifier.

From-SVN: r144325